sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() 
{
  var v = 0
  for(i <- 1 to getNombreValeurs() - 2)
  {
    copie(i,v)
    var j = i
    while((j > 1) && (getValeur(j-1) > v)
    {
      copie(j-1,j)
      j -= 1
    }
    setValeur(j,v)
  }
}